# MeshBrane

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  MeshBrane.code-workspace  README.md  backup_main_pulsar.py  cply_tools_setup.py  create_project.sh  extensionsw.txt  frozen_requirements.txt  generate_sample_meshes.py  half_edge_cutils_setup.py  imgui.ini  install.py  install.sh  main.py  main_pulsar.py  main_testing.py  main_vscode.py  min_requirements.txt  profile_results  python_requirements.txt  requirements.txt  scratch.py  scratch2.py  scratch3.py  thing
_numdiff/: findiff_weights1.pickle  findiff_weights2.pickle  findiff_weights3.pickle  findiff_weights4.pickle  some_funs.py
branes/: model.py  simulation_functions.py
convergence_tests/: convergence_model.py  convergence_plots.py  convergence_sim.py  main.py  ply_utils.py
data/: findiff_weights1.pickle  findiff_weights2.pickle  findiff_weights3.pickle  findiff_weights4.pickle  maybe_vutukuri_vesicle.yaml  parameters.yaml  stretch_test.yaml  (+4 more)
src/: CMakeLists.txt  __init__.py  combinatorics.cpp  geofuns.py  heat_kernel_test_sim.py  just_the_sim.py  math_utils.cpp  matrix_mesh.cpp  membrane.cpp  mesh_builder.cpp  meshbrane_object.cpp  model.py  model2.py  model3.py  patch.cpp  pretty_pictures.cpp  pretty_pictures.hpp  reg_sim.py  reg_sim2.py  rigid_spindle.cpp  rigid_spindle_sim.cpp  sim.py  simulation_base.cpp  simulation_manager.cpp  system_utils.cpp  talk_sim.py  utils.py  viewer.cpp
src/cbrane/: CMakeLists.txt  MeshBrane.cpp  MeshBrane.hpp  MeshLoader.cpp  MeshLoader.hpp  README.md  brane-utils  brane_utils  brane_utils.cpp  brane_utils.hpp  dumbbell_ultracoarse.ply  example  main  main.cpp  model  model.cpp  pretty-pictures.cpp  pretty-pictures.py  script_00.sh  test  test.cpp
src/cbrane/data/halfedge_meshes/double_torus/: H_prev.npy  V_hedge.npy  vertices.npy
src/cbrane/data/halfedge_meshes/double_torus_coarse/: halfedges.npy
src/cbrane/data/halfedge_meshes/double_torus_fine/: H_next.npy  H_prev.npy
src/cbrane/data/halfedge_meshes/dumbbell/: H_next.npy  V_hedge.npy  vertices.npy
src/cbrane/data/halfedge_meshes/dumbbell_coarse/: H_twin.npy
src/cbrane/data/halfedge_meshes/dumbbell_fine/: H_next.npy
src/cbrane/data/halfedge_meshes/dumbbell_ultrafine/: F_hedge.npy  V_hedge.npy  halfedges.npy
src/cbrane/data/halfedge_meshes/oblate/: H_prev.npy
src/cbrane/data/halfedge_meshes/oblate_coarse/: H_next.npy  H_twin.npy  H_vertex.npy
src/cbrane/data/halfedge_meshes/oblate_fine/: H_face.npy  H_vertex.npy  vertices.npy
src/cbrane/data/halfedge_meshes/oblate_ultrafine/: V_hedge.npy  vertices.npy
src/cbrane/data/halfedge_meshes/prolate/: F_hedge.npy  H_next.npy  H_vertex.npy  faces.npy  vertices.npy
src/cbrane/data/halfedge_meshes/prolate_coarse/: H_prev.npy  H_twin.npy  H_vertex.npy
src/cbrane/data/halfedge_meshes/prolate_fine/: H_prev.npy  V_hedge.npy
src/cbrane/data/halfedge_meshes/sphere/: F_hedge.npy  H_face.npy
src/cbrane/data/halfedge_meshes/sphere_coarse/: F_hedge.npy  H_face.npy  H_next.npy  H_prev.npy
src/cbrane/data/halfedge_meshes/sphere_ultrafine/: H_prev.npy
src/cbrane/data/halfedge_meshes/time_sphere16/: H_prev.npy  V_hedge.npy  vertices.npy
src/cbrane/data/halfedge_meshes/time_sphere64/: H_vertex.npy  halfedges.npy
src/cbrane/data/halfedge_meshes/torus/: H_next.npy
src/cbrane/data/halfedge_meshes/torus_coarse/: F_hedge.npy  H_face.npy  H_next.npy
src/cbrane/data/halfedge_meshes/torus_fine/: H_face.npy  H_vertex.npy  V_hedge.npy
src/cbrane/data/halfedge_meshes/torus_ultrafine/: H_next.npy
src/cbrane/data/halfedge_meshes/transverse_tori/: H_twin.npy
src/cbrane/data/halfedge_meshes/transverse_tori_coarse/: F_hedge.npy  H_face.npy
src/cbrane/data/halfedge_meshes/transverse_tori_fine/: faces.npy
src/cbrane/data/halfedge_meshes/triple_torus/: H_face.npy  H_vertex.npy  halfedges.npy
src/cbrane/data/halfedge_meshes/triple_torus_coarse/: F_hedge.npy  halfedges.npy  vertices.npy
src/cbrane/data/halfedge_meshes/triple_torus_fine/: H_twin.npy  vertices.npy
src/cbrane/data/ply_files/: dumbbell2_backup.ply  neovius_coarse.ply  pyramid4_flipped.ply  sphere_backup.ply  time_sphere16.ply  time_sphere32.ply  time_sphere64.ply  torus_backup.ply  triple_torus_backup.ply
src/cpp/: cply_tools.cpp  example_setup.py  half_edge_base_utils_test.cpp  half_edge_cutils.cpp  half_edge_utils.cpp  half_edge_utils_setup.py  py_to_cpp.py
src/cpp/deprecated/: example.cpp  half_edge_base_utils.cpp  ply_utils.cpp  py_to_cpp.py
src/numdiff/: __init__.py  some_funs.py
src/param_sweep/: CMakeLists.txt  main.cpp
src/pretty_pictures/: __init__.py  lipids.py  mayavi_plots.py  polyscope_plots.py
src/python/: _GLOBAL_VARS_.py  _combinatorics.py  atlas_test_sim.py  back_half_edge_mesh.py  build_half_edge_plys.py  combinatorics.py  complexity.py  convergence_tests.py  dart_group.py  figs.py  global_vars.py  half_edge_base_brane.py  half_edge_base_cotan_laplacian.py  half_edge_base_delaunay.py  half_edge_base_make_the_things.py  half_edge_base_mesh.py  half_edge_base_named_mesh.py  half_edge_base_patch.py  half_edge_base_ply_tools.py  half_edge_base_unit_torus.py  half_edge_base_utils.py  half_edge_base_viewer.py  half_edge_brane.py  half_edge_mesh.py  half_edge_mesh_list.py  half_edge_mesh_no_bdry_twin.py  half_edge_mesh_proto.py  half_edge_ops.py  half_edge_patch.py  half_edge_test.py  halfedge_jit_ops.py  implicit_surface_tools.py  jit_brane.py  jit_brane_utils.py  jit_utils.py  key_manager.py  linear_algebra.py  mesh_builder.py  mesh_viewer.py  mesh_viewer_base.py  (+14 more)
src/python/combinatorics/: __init__.py  packing.py
src/python/deprecated/: __half_edge_base_cython_utils.py  half_edge_brane.py  half_edge_mesh.py  half_edge_mesh_list.py  half_edge_mesh_no_bdry_twin.py  half_edge_test.py  ply_tools.py
src/python/mesh/: __init__.py  half_edge.py  ply_tools.py  viewer.py
src/python/utilities/: __init__.py
src/rigid_spindle_sim/: CMakeLists.txt  main.cpp
src/scripts/: generate_sample_meshes.py  run_simulation.py  setup.py
src/symdiff/: __init__.py  some_funs.py
(+950 files in other folders)
